# Retake

./: .dockerignore  .env.example  .gitignore  AGENTS.md  GEMINI.md  README.md  SECURITY_QUALITY_REVIEW.md  railway.toml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml  test_supabase_ingest.py
backend/app/: main.py
backend/app/api/v1/: endpoints.py
backend/app/core/: config.py  db.py  supabase.py
backend/app/models/: match.py
backend/app/services/: discovery.py  ingestion.py  processor.py  scraper.py  vlr_scraper.py
backend/tests/: test_integration_live.py  test_scraper_live.py  test_unit_find.py
docs/: 00-product-orchestration.md
docs/01-find/: SKILL.md  changelog.md  implementation-plan.md  overview.md  roadmap.md  structured-query-migration.md  tasks.md
docs/02-analyze/: SKILL.md
docs/03-plan/: SKILL.md
docs/shared/: api-specification.md  architecture-and-stack.md  deployment-log.md  development-standards.md  supabase-migration.md
frontend/: .env.example  components.json  package.json  vitest.config.ts
frontend/src/: styles.css
frontend/src/components/: coach-dashboard.tsx
frontend/src/lib/: constants.ts
frontend/src/routes/: __root.tsx  index.tsx
supabase/: config.toml
supabase/migrations/: 20251221104118_init_schema.sql  20251221105926_add_match_rounds_function.sql  20251222063021_event_management_schema.sql  20251223041922_update_match_rounds_ace.sql  20251230000000_add_team_names_and_timestamp.sql  20251230000001_fix_match_rounds_function.sql  20251230000002_fix_rpc_vector_parameter.sql
(+14 files in other folders)
